# ECG2Signal

./: README.md
ECG 2Signal/: README.md
ECG 2Signal Additional Features/: DEMO_PACKAGE.md  ENHANCED_UI_COMPLETE.md  ENHANCEMENT_ROADMAP.md  OPTION_E_QUICKSTART.md  OPTION_E_START_HERE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  findings.py  intervals.py  test_clinical_features.py
ECG 2Signal Part 2/: START_HERE.md
ECG 2Signal Part3/: DOWNLOAD_GUIDE.md  OPTION_C_START_HERE.md  PROJECT_COMPLETION.md  README.md  ui_guide.md
ECG Platform/: .env.example  .gitignore  CLINICAL_FEATURES_ADDED.md  DEMO_ADDED_SUMMARY.md  DEMO_INTEGRATION.md  Dockerfile  ENHANCED_UI_ADDED.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  OPTION_E_CLINICAL_FEATURES.md  QUICKSTART.md  README.md  README_OPTION_E.md  README_WITH_DEMO.md  SETUP.md  STRUCTURE.txt  __init__.py  add_training_configs.py  align_leads.py  app.py  augment.py  calibration.md  clinical_metrics.md  complete_project.py  complete_project2.py  complete_tests.py  compliance_security.md  compose.yaml  config.py  data_spec.md  dcm_waveform.py  denoise.py  detect_page.py  dewarp.py  download_demo_models.sh  ecg2signal.py  finalize_docs.py  image_io.py  (+27 more)
ECG Platform/configs/: ocr_tiny.yaml  unet_small.yaml
ECG Platform/docs/: CONTRIBUTING.md  api.md  roadmap.md  usage.md
ECG Platform/ecg2signal/: __init__.py  logging_conf.py  types.py
ECG Platform/ecg2signal/api/: __init__.py  main.py
ECG Platform/ecg2signal/cli/: __init__.py
ECG Platform/ecg2signal/clinical/: __init__.py  arrhythmia.py  qt_analysis.py  reports.py
ECG Platform/ecg2signal/io/: __init__.py  edf_io.py  fhir.py
ECG Platform/ecg2signal/layout/: __init__.py  ocr_labels.py
ECG Platform/ecg2signal/preprocess/: __init__.py  grid_detect.py  scale_calibrate.py
ECG Platform/ecg2signal/reconstruct/: __init__.py  raster_to_signal.py
ECG Platform/ecg2signal/segment/: __init__.py  separate_layers.py  trace_curve.py
ECG Platform/ecg2signal/segment/models/: __init__.py
ECG Platform/ecg2signal/training/: __init__.py  datasets.py  export_onnx.py  render.py  train_unet.py
ECG Platform/ecg2signal/ui/: __init__.py  app.py
ECG Platform/ecg2signal/utils/: __init__.py  tempfile_utils.py  viz.py
ECG Platform/notebooks/: complete_demo.ipynb
ECG Platform/scripts/: benchmark.sh  create_modules.sh  generate_demo_models.py
ECG Platform/tests/: __init__.py  conftest.py  test_exports.py  test_integration.py  test_preprocess.py  test_reconstruct.py  test_segmentation.py  test_trace.py
