[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg2signal"
version = "0.1.0"
description = "Production-grade ECG image to digital signal conversion"
authors = [
    {name = "ECG2Signal Contributors", email = "contributors@ecg2signal.org"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["ecg", "signal-processing", "medical-imaging", "computer-vision", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "onnxruntime>=1.15.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "streamlit>=1.28.0",
    "typer>=0.9.0",
    "wfdb>=4.1.0",
    "mne>=1.5.0",
    "pyedflib>=0.1.30",
    "pydicom>=2.4.0",
    "fhir.resources>=7.0.0",
    "reportlab>=4.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "pypdf>=3.16.0",
    "pdf2image>=1.16.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "albumentations>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "pre-commit>=3.4.0",
]

training = [
    "wandb>=0.15.0",
    "tensorboard>=2.14.0",
    "pytorch-lightning>=2.0.0",
]

all = [
    "ecg2signal[dev,training]",
]

[project.urls]
Homepage = "https://github.com/yourusername/ecg2signal"
Documentation = "https://ecg2signal.readthedocs.io"
Repository = "https://github.com/yourusername/ecg2signal"
Issues = "https://github.com/yourusername/ecg2signal/issues"

[project.scripts]
ecg2signal = "ecg2signal.cli.ecg2signal:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ecg2signal*"]

[tool.setuptools.package-data]
ecg2signal = ["py.typed", "**/*.yaml", "**/*.json", "**/*.onnx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ecg2signal --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "skimage.*",
    "wfdb.*",
    "mne.*",
    "pyedflib.*",
    "reportlab.*",
    "albumentations.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
